# specatalog

./: .buildinfo  .gitignore  README.md  admin_backup.html  admin_database.html  admin_new_data_loader.html  admin_new_models.html  alembic.ini  build_documentation.sh  create.py  create_database.py  crud_db.html  data_management.html  delete.py  example_create.py  genindex.html  helper_functions.py  helpers.html  index.html  insert.py  installation.html  main.html  main.py  models.html  objects.inv  pyproject.toml  read.py  search.html  searchindex.js  tutorial_allowed_values.html  tutorial_hdf5object.html  tutorial_measurements.html  tutorial_molecules.html  tutorial_multiple_files.html  tutorial_structure.html  update.html  update.py  working_with_remote_folders.html
.github/workflows/: ci.yml  deploy_docs.yml  docs.yml  publish-pypi.yml
_modules/: index.html
_sources/: admin_database.rst.txt  admin_new_data_loader.rst.txt  crud_db.rst.txt  data_management.rst.txt  index.rst.txt  installation.rst.txt  main.rst.txt  models.rst.txt  tutorial_allowed_values.rst.txt  tutorial_hdf5object.rst.txt  tutorial_measurements.rst.txt  tutorial_molecules.rst.txt  tutorial_multiple_files.rst.txt  tutorial_structure.rst.txt  update.rst.txt  working_with_remote_folders.rst.txt
_static/: documentation_options.js
crud_db/: create.py
data_management/: data_loader.py  hdf5_reader.py  measurement_management.py
docs/: Makefile
docs/source/: admin_backup.rst  admin_database.rst  admin_new_data_loader.rst  admin_new_models.rst  conf.py  crud_db.rst  data_management.rst  helpers.rst  index.rst  installation.rst  main.rst  models.rst  tutorial_advanced.rst  tutorial_allowed_values.rst  tutorial_hdf5object.rst  tutorial_measurements.rst  tutorial_molecules.rst  tutorial_multiple_files.rst  tutorial_structure.rst  working_with_remote_folders.rst
examples/: create_new_measurement.py  create_new_molecule.py  deletions.py  find_and_read.py  find_measurement.py  update_measurement.py  work_with_measurement.py
helpers/: helper_functions.py
migrations/: env.py
migrations/versions/: 00555547b637_add_additional_info_field_to_.py  2966fc056127_add_fluorescence_measurement.py  2fef0175672b_add_name_suffix.py  2ff4277f3890_add_uvvis_measurement.py  4c002ff6dfdd_initial_schema.py  6c09d149d5bb_add_ta_measurement.py  bda9373c5357_change_enum_to_string.py  (+1 more)
models/: allowed_values.py  base.py  creation_pydantic_measurements.py  creation_pydantic_molecules.py  measurements.py  molecules.py
src/: main.py
src/gui/: SpecatalogGui.py  (+8 more)
user/: defaults.json
(+69 files in other folders)
