[project]
name = "specatalog"
version = "1.0"
description = "Tools to archive spectral data."
authors = [
  { name = "Theresia Quintes", email = "theresia.quintes@physchem.uni-freiburg.de" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
  "h5py~=3.0",
  "numpy>=1.20",
  "sqlalchemy~=2.0",
  "pydantic~=2.12",
  "alembic~=1.17",
  "psycopg2-binary",
  "pandas~=2.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["specatalog*"]

[tool.setuptools.package-data]
specatalog = ["user/*.json"]

[project.scripts]
specatalog-welcome = "specatalog.cli:print_welcome"
specatalog-configuration = "specatalog.cli:configure_db"
specatalog-init-db = "specatalog.helpers.create_database:specatalog_init_db"
specatalog-update-db = "specatalog.helpers.create_database:run_alembic_upgrade"
