[project]
name = "specatalog"
version = "1.0.0"
description = "Specatalog is a software framework for the systematic management and archival of spectroscopic measurement data, integrating a relational metadata database with structured data storage and analysis workflows. "
authors = [
  { name = "Theresia Quintes", email = "theresia.quintes@physchem.uni-freiburg.de" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
  "h5py~=3.0",
  "numpy>=1.20",
  "sqlalchemy~=2.0",
  "pydantic~=2.12",
  "alembic~=1.17",
  "psycopg2-binary",
  "pandas~=2.3",
  "PyQt6~=6.10",
  "pyqtdarktheme~=2.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["specatalog*"]

[tool.setuptools.package-data]
specatalog = ["user/*.json"]

[project.scripts]
specatalog-welcome = "specatalog.cli:print_welcome"
specatalog-configuration = "specatalog.cli:configure_db"
specatalog-init-db = "specatalog.helpers.create_database:specatalog_init_db"
specatalog-init-dir = "specatalog.helpers.create_database:create_archive_directory"
specatalog-update-db = "specatalog.helpers.create_database:run_alembic_upgrade"
specatalog-gui = "specatalog.gui.gui_launcher:start_gui"

[project.urls]
Repository = "https://github.com/TheresiaQuintes/specatalog"
Documentation = "https://theresiaquintes.github.io/specatalog/"
